// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Prompt > should handle a complete workflow testing all Prompt class features 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": "role:
You are a professional database assistant.
guidelines:
Always verify data integrity before returning results.
<variables>
  <userId>
 123
  </userId>
  <environment>
 production
  </environment>
  <config>
database: main_db
timeout: 5000
retries: 3
features:
  caching: true
  logging:
    level: info
    destination: file

  </config>
  <expectedUser>
id: 123
permissions:
  - read
  - write

  </expectedUser>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "I need information about user 123",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "id": 123,
            "query": "getUserById",
          },
          "toolCallId": "call_1",
          "toolName": "database",
          "type": "tool-call",
        },
        {
          "text": "Let me help you with the database query.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": "role:
You are a professional database assistant.
guidelines:
Always verify data integrity before returning results.
<variables>
  <userId>
 123
  </userId>
  <environment>
 production
  </environment>
  <config>
database: main_db
timeout: 5000
retries: 3
features:
  caching: true
  logging:
    level: info
    destination: file

  </config>
  <expectedUser>
id: 123
permissions:
  - read
  - write

  </expectedUser>
  <stepInfo>
 Step 1: Querying database
  </stepInfo>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "I need information about user 123",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me help you with the database query.",
              "type": "text",
            },
            {
              "input": {
                "id": 123,
                "query": "getUserById",
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "user": {
                    "email": "alice@example.com",
                    "id": 123,
                    "name": "Alice",
                  },
                },
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "data": {
              "name": "Alice",
            },
            "format": "pretty",
          },
          "toolCallId": "call_2",
          "toolName": "formatter",
          "type": "tool-call",
        },
        {
          "text": "Found the user! Now formatting the result.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": "role:
You are a professional database assistant.
guidelines:
Always verify data integrity before returning results.
<variables>
  <userId>
 123
  </userId>
  <environment>
 production
  </environment>
  <config>
database: main_db
timeout: 5000
retries: 3
features:
  caching: true
  logging:
    level: info
    destination: file

  </config>
  <expectedUser>
id: 123
permissions:
  - read
  - write

  </expectedUser>
  <stepInfo>
 Step 2: Formatting results
  </stepInfo>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "I need information about user 123",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me help you with the database query.",
              "type": "text",
            },
            {
              "input": {
                "id": 123,
                "query": "getUserById",
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "user": {
                    "email": "alice@example.com",
                    "id": 123,
                    "name": "Alice",
                  },
                },
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
        {
          "content": [
            {
              "text": "Found the user! Now formatting the result.",
              "type": "text",
            },
            {
              "input": {
                "data": {
                  "name": "Alice",
                },
                "format": "pretty",
              },
              "toolCallId": "call_2",
              "toolName": "formatter",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "formatted": "User: Alice (alice@example.com)",
                },
              },
              "toolCallId": "call_2",
              "toolName": "formatter",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Here is the formatted user information.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle composite tools with defTool array syntax 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Please write, append, and then read the file.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "calls": [
              {
                "args": {
                  "content": "Hello World",
                  "path": "/tmp/test.txt",
                },
                "name": "write",
              },
              {
                "args": {
                  "content": "
Appended line",
                  "path": "/tmp/test.txt",
                },
                "name": "append",
              },
              {
                "args": {
                  "path": "/tmp/test.txt",
                },
                "name": "read",
              },
            ],
          },
          "toolCallId": "call_composite_1",
          "toolName": "file",
          "type": "tool-call",
        },
        {
          "text": "I will perform multiple file operations.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Please write, append, and then read the file.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "I will perform multiple file operations.",
              "type": "text",
            },
            {
              "input": {
                "calls": [
                  {
                    "args": {
                      "content": "Hello World",
                      "path": "/tmp/test.txt",
                    },
                    "name": "write",
                  },
                  {
                    "args": {
                      "content": "
Appended line",
                      "path": "/tmp/test.txt",
                    },
                    "name": "append",
                  },
                  {
                    "args": {
                      "path": "/tmp/test.txt",
                    },
                    "name": "read",
                  },
                ],
              },
              "toolCallId": "call_composite_1",
              "toolName": "file",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "results": [
                    {
                      "name": "write",
                      "result": {
                        "bytesWritten": 11,
                        "success": true,
                      },
                    },
                    {
                      "name": "append",
                      "result": {
                        "bytesWritten": 14,
                        "success": true,
                      },
                    },
                    {
                      "name": "read",
                      "result": {
                        "content": "Hello World
Appended line",
                      },
                    },
                  ],
                },
              },
              "toolCallId": "call_composite_1",
              "toolName": "file",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "All file operations completed successfully!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle defAgent to create a sub-prompt with its own model 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "I need detailed research on quantum computing.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "depth": "detailed",
            "topic": "quantum computing",
          },
          "toolCallId": "call_agent_1",
          "toolName": "researchAgent",
          "type": "tool-call",
        },
        {
          "text": "Let me delegate this task to a specialist agent.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "I need detailed research on quantum computing.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me delegate this task to a specialist agent.",
              "type": "text",
            },
            {
              "input": {
                "depth": "detailed",
                "topic": "quantum computing",
              },
              "toolCallId": "call_agent_1",
              "toolName": "researchAgent",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "agentSteps": [
                {
                  "input": {
                    "prompt": [
                      {
                        "content": [
                          {
                            "text": "Please research <researchTopic> with <researchDepth> level of detail.",
                            "type": "text",
                          },
                        ],
                        "role": "user",
                      },
                    ],
                  },
                  "output": {
                    "content": [
                      {
                        "text": "Analyzing quantum computing in depth...Quantum computing uses qubits and superposition principles for computation.",
                        "type": "text",
                      },
                    ],
                    "finishReason": "stop",
                  },
                },
              ],
              "output": {
                "type": "text",
                "value": "Analyzing quantum computing in depth...Quantum computing uses qubits and superposition principles for computation.",
              },
              "toolCallId": "call_agent_1",
              "toolName": "researchAgent",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "The research agent has completed the analysis.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle errors in composite tool sub-calls gracefully 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Run the operations.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "calls": [
              {
                "args": {
                  "value": 1,
                },
                "name": "success",
              },
              {
                "args": {
                  "value": 2,
                },
                "name": "fail",
              },
              {
                "args": {
                  "value": 3,
                },
                "name": "success",
              },
            ],
          },
          "toolCallId": "call_error_1",
          "toolName": "operations",
          "type": "tool-call",
        },
        {
          "text": "Executing operations...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Run the operations.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Executing operations...",
              "type": "text",
            },
            {
              "input": {
                "calls": [
                  {
                    "args": {
                      "value": 1,
                    },
                    "name": "success",
                  },
                  {
                    "args": {
                      "value": 2,
                    },
                    "name": "fail",
                  },
                  {
                    "args": {
                      "value": 3,
                    },
                    "name": "success",
                  },
                ],
              },
              "toolCallId": "call_error_1",
              "toolName": "operations",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "results": [
                    {
                      "name": "success",
                      "result": {
                        "result": "ok",
                      },
                    },
                    {
                      "name": "fail",
                      "result": {
                        "error": "Intentional failure",
                      },
                    },
                    {
                      "name": "success",
                      "result": {
                        "result": "ok",
                      },
                    },
                  ],
                },
              },
              "toolCallId": "call_error_1",
              "toolName": "operations",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Operations finished with some errors.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;
